--- a/js/Pacman/style.css
+++ b/js/Pacman/style.css
@@ -18,7 +18,9 @@ div.brick {
     background-color: blue;
 }
 
-div.empty {}
+div.empty {
+    background-color: black;
+}
 
 div.coin {
     background-image: url(Pacman-coin.gif);
